WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256097
[ macOS ] TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=256097
Summary
[ macOS ] TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion is a constan...
Robert Jenner
Reported
2023-04-28 10:35:30 PDT
TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion is a constant failure on macOS. HISTORY:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion
FAIL TEXT: TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion 2023-04-28 09:49:50.584 TestWebKitAPI[69683:178359483] *** WARNING: Method convertPointToBase: in class NSView is deprecated on 10.7 and later. It should not be used in new applications. /Volumes/Data/worker/Apple-Ventura-Release-Build/build/Tools/TestWebKitAPI/Tests/mac/MediaPlaybackSleepAssertion.mm:179 Value of: hasAssertionType(CFSTR("PreventUserIdleDisplaySleep")) Actual: false Expected: true /Volumes/Data/worker/Apple-Ventura-Release-Build/build/Tools/TestWebKitAPI/Tests/mac/MediaPlaybackSleepAssertion.mm:186 Value of: hasAssertionType(CFSTR("PreventUserIdleSystemSleep")) Actual: false Expected: true
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-28 10:35:50 PDT
<
rdar://problem/108666759
>
Robert Jenner
Comment 2
2023-04-28 11:17:57 PDT
I was able to reproduce the failure, as well as bisect to a regression point. You can reproduce at Ventura Release ToT running as follows: run-api-tests TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion And I was able to reproduce the failure back to
263474@main
, but not at
263473@main
. So it appears that
https://commits.webkit.org/263474@main
is where this test regressed at.
Chris Dumez
Comment 3
2023-04-28 12:55:58 PDT
Will fix shortly.
Chris Dumez
Comment 4
2023-04-28 13:04:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13285
EWS
Comment 5
2023-04-28 15:01:42 PDT
Committed
263518@main
(e90882bc5116): <
https://commits.webkit.org/263518@main
> Reviewed commits have been landed. Closing PR #13285 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug