[ macOS ] TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion is a constant failure https://bugs.webkit.org/show_bug.cgi?id=256097 rdar://108666759

Reviewed by Alex Christensen.

With WebKitLegacy, pages apparently do not have a pageID. Since SleepDisablers
should work with WebKitLegacy, we now stop requiring a pageID to construct a
SleepDisabler. The pageID is now optional and ignored when taking the sleep
disabling assertion in-process, like it is the case on WebKitLegacy. We still
require a pageID in the WebKit2 case, then we IPC to the UIProcess to take the
assertion.

* Source/WebCore/Modules/screen-wake-lock/WakeLock.cpp:
(WebCore::WakeLock::request):
* Source/WebCore/Modules/screen-wake-lock/WakeLockManager.cpp:
(WebCore::WakeLockManager::addWakeLock):
* Source/WebCore/Modules/screen-wake-lock/WakeLockManager.h:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::updateSleepDisablerIfNeeded):
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::updateSleepDisabling):
* Source/WebCore/platform/SleepDisabler.cpp:
(WebCore::SleepDisabler::SleepDisabler):
* Source/WebCore/platform/SleepDisabler.h:
* Source/WebCore/platform/SleepDisablerClient.h:
* Source/WebKit/WebProcess/WebSleepDisablerClient.cpp:
(WebKit::WebSleepDisablerClient::didCreateSleepDisabler):
(WebKit::WebSleepDisablerClient::didDestroySleepDisabler):
* Source/WebKit/WebProcess/WebSleepDisablerClient.h:

Canonical link: https://commits.webkit.org/263518@main