Source/WebCore/platform/SleepDisablerClient.h
@@ -34,8 +34,8 @@ namespace WebCore {
 class SleepDisablerClient {
 public:
     virtual ~SleepDisablerClient() { }
-    virtual void didCreateSleepDisabler(SleepDisablerIdentifier, const String& reason, bool display, PageIdentifier) = 0;
-    virtual void didDestroySleepDisabler(SleepDisablerIdentifier, PageIdentifier) = 0;
+    virtual void didCreateSleepDisabler(SleepDisablerIdentifier, const String& reason, bool display, std::optional<PageIdentifier>) = 0;
+    virtual void didDestroySleepDisabler(SleepDisablerIdentifier, std::optional<PageIdentifier>) = 0;
 };
 
 WEBCORE_EXPORT std::unique_ptr<SleepDisablerClient>& sleepDisablerClient();
