Source/WebKit/WebProcess/WebSleepDisablerClient.h
@@ -32,8 +32,8 @@ namespace WebKit {
 class WebSleepDisablerClient final : public WebCore::SleepDisablerClient {
     WTF_MAKE_FAST_ALLOCATED;
 public:
-    void didCreateSleepDisabler(WebCore::SleepDisablerIdentifier, const String&, bool display, WebCore::PageIdentifier) final;
-    void didDestroySleepDisabler(WebCore::SleepDisablerIdentifier, WebCore::PageIdentifier) final;
+    void didCreateSleepDisabler(WebCore::SleepDisablerIdentifier, const String&, bool display, std::optional<WebCore::PageIdentifier>) final;
+    void didDestroySleepDisabler(WebCore::SleepDisablerIdentifier, std::optional<WebCore::PageIdentifier>) final;
 };
 
 } // namespace WebKit
